// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should add one item into the list 1`] = `
<li>
  TODO 1: Add the first item
</li>
`;

exports[`List should clear the list after adding another item 1`] = `
<li>
  TODO 2: Add the second item
</li>
`;
